tests/baselines/reference/tsxDynamicTagName4.errors.txt
tsxDynamicTagName4.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== tsxDynamicTagName4.tsx (1 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface IntrinsicElements {
    		div: any
    		h1: any
    	}
    }
    
    var CustomTag: "h1" = "h1";
    <CustomTag> Hello World </CustomTag>